--- a/help.css
+++ b/help.css
@@ -9,26 +9,56 @@ body{
     justify-content: space-evenly;
     align-items: center;
     
+   
 
 }
 .image-container img{
 
 width: 400px;
 
+transform: scale(-1,1);
 }
 
-.help_button{
 
-    height: 50px;
-    width: 50px;
-    background-color: #FFD700;
-    color: #3B3B3B;
-    padding: 0.5em 1em;
+
+.headerBox{
+    display: grid;
+    gap: 0px;
+    grid-template-columns: 16% 14% 40% 14% 16%;
+}
+
+.button {
+    background-color: #D9D9D9; /* Darker background for buttons */
+    color: black; /* White text for buttons */
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 0.5em;
-    
+    background-color: #FFD700;
+    padding: 10px 20px;
+    cursor: hand;
+    border-radius: 10px;
 }
 
+.header {
+    background-image: linear-gradient(to right, #94AF8D, #F5F0A6);
+    /*background-color: white;*/
+    border-radius: 10px;
+    padding-top: 17px;
+    padding-bottom: 10px;
+    
+    color: black;
+    grid-column: 3;
+    text-align: center;
+    margin-top: 20px;
+}
+h2{
+    text-align: center;
+    color: black;
+    border-radius: 10px;
+    border-width: 10px;
+    background-color: #D9D9D9;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin:15%;
+    border-radius: 40px;
 
+
+}
