--- a/help.css
+++ b/help.css
@@ -28,14 +28,14 @@ transform: scale(-1,1);
 }
 
 .button {
-    background-color: #D9D9D9; /* Darker background for buttons */
-    color: black; /* White text for buttons */
-    border: none;
-    background-color: #FFD700;
-    padding: 10px 20px;
-    cursor: hand;
-    border-radius: 10px;
+    background-color: #F5F0A6;
+    color: black;
+    grid-column: 5;
+    margin: 20px;
+    font: bold;
+    font-size:200%;
 }
+
 
 .header {
     background-image: linear-gradient(to right, #94AF8D, #F5F0A6);
