--- a/styles.css
+++ b/styles.css
@@ -55,4 +55,14 @@
     grid-template-columns: 16% 20% 28% 20% 16%;
 }
 
+.image-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.image-container img{
+width: 400px;
+transform: scale(-1,1);
+}
+
 
